--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
-    mappings channel: 'parchment', version: "2023.02.26-${mc_version}"
+    mappings channel: 'parchment', version: "1.19.3-2023.03.12-${mc_version}"
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     runs {
@@ -90,7 +90,7 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 dependencies {
-    minecraft "net.minecraftforge:forge:${mc_version}-44.1.0"
+    minecraft "net.minecraftforge:forge:${mc_version}-45.0.66"
 }
 
 jar {
