--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,19 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mc_version=1.20.1
-mod_version=1.2.1
+## Environment Properties
+minecraft_version=1.20.1
+minecraft_version_range=[1.20.1,1.21)
+forge_version=47.2.0
+forge_version_range=[47,)
+mapping_channel=parchment
+mapping_version=2023.09.03-1.20.1
+
+## Mod Properties
+mod_id=denseores
+mod_name=Dense Ores
+mod_license=AGPL-3.0
+mod_version=1.2.2
+mod_group_id=com.newjumper.denseores
+mod_authors=NewJumperr
+mod_description=Ores that drop more materials!
